# weather_app

./: README.md  pyproject.toml
src/: main.py  service.py
