[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Douglas-cc", email = "douglasdasilvasousa8@gmail.com"},
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "requests>=2.31.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

